--- a/style.css
+++ b/style.css
@@ -9,11 +9,24 @@ header{
     text-transform: uppercase;
     font-size: 20px;
 }
-.jatekter{
-    display: flex;
-    justify-content: center;
-    margin: 50px;
-    border: 1px solid grey;
+#jatekter{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    align-items: center;
+    display: grid;
+    
+}
+#jatekter div{
+    width: 50px;
     height: 50px;
+}
+
+.lampa{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
     background-color: green;
+    text-align: center;
+
 }
