--- a/style.css
+++ b/style.css
@@ -4,29 +4,38 @@
 main{
     text-align: center;
 }
+body{
+    width: 100%;
+    max-width: 1000px;
+    margin: auto;
+}
+
 header{
     text-decoration:overline;
     text-transform: uppercase;
     font-size: 20px;
+    
 }
 #jatekter{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
-    align-items: center;
-    display: grid;
-    
+    grid-template-columns: 1fr 1fr 1fr ; 
+    gap: 6px; 
+    width: 10px; 
+    height: 100px; 
+
 }
+article{
+    display: flex;
+    justify-content: center;
+    height: 300px;
+}
+
 #jatekter div{
     width: 50px;
     height: 50px;
-}
-
-.lampa{
-    width: 100px;
-    height: 100px;
     border-radius: 50%;
-    background-color: green;
-    text-align: center;
-
+    margin: auto;
+    
 }
+
+
