--- a/style.css
+++ b/style.css
@@ -3,34 +3,41 @@
 }
 main{
     text-align: center;
+     
+    
 }
 body{
+    background-image: url("BODR_YouTube1.png");
     width: 100%;
     max-width: 1000px;
     margin: auto;
+    background-size: cover;
 }
 
 header{
     text-decoration:overline;
     text-transform: uppercase;
     font-size: 20px;
+    color: red;
     
 }
-#jatekter{
+.lampa{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr ; 
-    gap: 6px; 
-    width: 10px; 
-    height: 100px; 
+    gap: 10px; 
+    width: 200px; 
+    height: 100px;
+    
 
 }
 article{
     display: flex;
     justify-content: center;
     height: 300px;
+    
 }
 
-#jatekter div{
+.lampa div{
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -38,3 +45,7 @@ article{
     
 }
 
+footer{
+    color: red;
+    font-size: large;
+}
