--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ main{
     
 }
 body{
-    background-image: url("BODR_YouTube1.png");
+    background-color: aqua;
     width: 100%;
     max-width: 1000px;
     margin: auto;
